# rpg_vikit

vikit_common/: CMakeLists.txt  package.xml
vikit_ros/: CMakeLists.txt  package.xml
vikit_ros/include/vikit/: camera_loader.h  output_helper.h  params_helper.h
vikit_ros/src/: camera_loader.cpp  output_helper.cpp
