<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vikit_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shamanqing@outlook.com">heqing</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>vikit_common</depend>
  <depend>tf2</depend>  <!-- ROS 2 uses tf2 instead of tf -->
  <depend>tf2_ros</depend>  <!-- ROS 2 uses tf2 instead of tf -->
  <depend>visualization_msgs</depend>
  <depend>OpenCV</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>sophus</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
